examples/test/testpolicy1817.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1817
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key46: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value40
          key6: value49
          key34: value15
      podSelector:
        matchLabels:
          key12: value5
          key49: value12
